feat(network-netty): add netty environment implementation